# cw1/src/routes/user.routes.ts
@@ -17,15 +17,18 @@ router.get(
   userController.getAllUsers,
   /* 
     #swagger.tags = ['User']
+    #swagger.path = '/user/'
     #swagger.description = 'Retrieve a list of all users. Required authorization.'
   */
 );
+
 router.post(
   "/register",
   validate(registerUserSchema),
   userController.registerUser,
   /*  
     #swagger.tags = ['User']
+    #swagger.path = '/user/register'
     #swagger.description = 'Register a new user.'
   */
 );
@@ -35,6 +38,7 @@ router.post(
   userController.loginUser,
   /*  
     #swagger.tags = ['User']
+    #swagger.path = '/user/login'
     #swagger.description = 'Login user and get JWT token.'
   */
 );
@@ -44,6 +48,7 @@ router.post(
   userController.logoutUser,
   /* 
     #swagger.tags = ['User']
+    #swagger.path = '/user/logout'
     #swagger.description = 'Logout the authenticated user. Required authorization.'
   */
 );
@@ -53,6 +58,7 @@ router.post(
   userController.verifyEmail,
   /*  
     #swagger.tags = ['User']
+    #swagger.path = '/user/email-verification'
     #swagger.description = 'Verify email using the token received during registration.'
   */
 );
@@ -62,6 +68,7 @@ router.post(
   userController.requestPasswordReset,
   /*  
     #swagger.tags = ['User']
+    #swagger.path = '/user/password-reset-request'
     #swagger.description = 'Request a password reset token via email.'
   */
 );
@@ -71,6 +78,7 @@ router.post(
   userController.resetPassword,
   /*  
     #swagger.tags = ['User']
+    #swagger.path = '/user/password-reset'
     #swagger.description = 'Reset password using the received token.'
   */
 );
